--- a/style.css
+++ b/style.css
@@ -8,9 +8,16 @@
     --big-font: 'Rubik, sans-serif';
     --big-font-weigth: bold;
     --small-font: 'Karla', sans-serif;
-    --dark-color: #511FDB;
+    --dark-color: #5b34c7;
     --button-color: #4DD420;
+    --button2-color: #3652ce;
     --dark-color-analogue: #B341F5;
+    --text-contrast-color: #FD8116;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 /*Font families*/
@@ -29,32 +36,55 @@ h4,
 h5,
 h6,
 p {
-    font-family: var(--samll-font);
+    font-family: var(--small-font);
 }
 
 /*buttons*/
 
-.button,
-button {
+.button {
     background-color: var(--button-color);
     border-radius: 10px;
     transition: 0.35s ease;
-    padding: 10px;
+    padding: 0.7rem 2rem;
     border: none;
+    text-decoration: none;
+    color: aliceblue;
+    font-weight: bolder;
+    text-transform: uppercase;
 }
 
-
-.button,
-button:hover {
+.button:hover {
     background-color: green;
     
 }
 
+/*Button 2*/
 
-.button,
-button a {
+.button a {
+    text-decoration: none;
+}
+
+.button2 {
+    background-color: var(--button2-color);
+    border-radius: 10px;
+    transition: 0.35s ease;
+    padding: 0.7rem 2rem;
+    border: none;
     text-decoration: none;
     color: aliceblue;
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+
+
+.button2:hover {
+    background-color: darkblue;
+    
+}
+
+
+.button2 a {
+    text-decoration: none;
 }
 
 
@@ -139,7 +169,7 @@ button a {
 
 .left-below-nav span {
     font-family: var(--big-font);
-    color: var(--dark-color-analogue);
+    color: var(--text-contrast-color);
     font-size: 3rem;
     font-weight: var(--big-font-weigth);
     margin-top: 12px;
@@ -165,6 +195,7 @@ button a {
     max-width: 100%;
     height: auto;
     animation: float 2s ease-in-out infinite;
+    float: right;
 }
 
 @keyframes float {
@@ -190,7 +221,7 @@ button a {
     padding: 2em;
     margin: 0;
     padding: 2rem 0;
-    background-color: #dad8d8;
+    background-image: url(./Imagenes/Backgrounds/white.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -271,7 +302,14 @@ button a {
     display: flex;
     width: 88%;
     margin: 0 auto;
-    align-content: flex-start;
+    align-content: center;
+    justify-content: center;
+}
+
+.contact-container h2 {
+    color: var(--text-contrast-color);
+    font-size: 3rem;
+    margin-bottom: 2rem;
 }
 
 .forms-container {
@@ -320,21 +358,43 @@ form textarea {
 
 #faq {
     width: 100%;
-    background-color:#dad8d8;
+    background-image: url(./Imagenes/Backgrounds/white.jpg);
     margin: 0;
-    padding: 1rem;
+    padding: 6rem 0;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .faq-container {
     display: flex;
     width: 88%;
     margin: 0 auto;
+    height: auto;
 }
 
 .faq-intro-container {
     width: 40%;
     margin: 0;
     justify-content: center;
+}
+
+.faq-intro-container p {
+    color: black;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+}
+
+.faq-intro-container h2 {
+    color: var(--text-contrast-color);
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+.faq-intro-container a {
+    color: black;
+    text-transform: uppercase;
+    padding-top: 2rem;
 }
 
 .faq-questions-container {
@@ -346,26 +406,30 @@ form textarea {
 
 .fa-info-circle {
     margin-right: 0.5rem;
-    color: purple;
+    color: var(--button-color);
 }
 
 /*Accordion on false*/
 
-.accordion[aria-expanded*="false"] {
+.accordion[aria-expanded="false"] {
     padding: 0.3rem;
     background-color: white;
     box-shadow: 4px 4px 4px gray;
     margin: 0.5rem;
     width: 100%;
     cursor: pointer;
+    
 }
 
-.accordion[aria-expanded*="false"] h3 {
+.accordion[aria-expanded="false"] h3 {
     color: black;
-    text-align: center;
     position: relative;
+    padding: 1rem 0 1rem 1.5rem;
 }
 
+.accordion[aria-expanded="false"] h3:hover {
+    color: var(--button-color);
+}
 
 
 .accordion[aria-expanded="false"] h3::before {
@@ -373,10 +437,12 @@ form textarea {
     right: 0;
     text-align: center;
     position: absolute;
+    color: var(--button-color);
+    font-size: 1.5rem;
 }
 
 .accordion[aria-expanded="false"] .faq-answer {
-    opacity: 0;
+    display: none;
     overflow: hidden;
 }
 
@@ -392,7 +458,23 @@ form textarea {
 }
 
 .accordion[aria-expanded="true"] .faq-answer {
-    opacity: 1;
+    display: block;
+    padding: 1.5rem 0 1rem 1.5rem;
+}
+
+.accordion[aria-expanded="true"] h3 {
+    color: black;
+    position: relative;
+    padding: 1rem 0 1rem 1.5rem;
+}
+
+.accordion[aria-expanded="true"] h3::before {
+    content: '-';
+    right: 0;
+    text-align: center;
+    position: absolute;
+    color: var(--button-color);
+    font-size: 1.5rem;
 }
 
 /*Call to action*/
@@ -430,13 +512,25 @@ form textarea {
 .call-center-container {
     flex: 2;
     text-align: center;
+    justify-content: center;
+    padding: 3rem 0;
+}
+
+.call-center-container h2 {
+    font-size: 3rem;
+    color: var(--text-contrast-color);
+    margin: 2rem 0;
+}
+
+.call-center-container h3 {
+    color: white;
 }
 
 /*Footer*/
 
 #footer {
     width: 100%;
-    padding: 1rem 0;
+    padding: 0 1rem 1rem;
     height: auto;
     background-image: url(./Imagenes/Backgrounds/dark\ space\ bottom.jpg);
 }
@@ -451,6 +545,7 @@ form textarea {
 
 .footer-copyright {
     flex: 1;
+    color: aliceblue;
 }
 
 .footer-info {
