--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --big-font-weigth: bold;
     --small-font: 'Karla', sans-serif;
     --dark-color: #5b34c7;
-    --button-color: #4DD420;
+    --button-color: #38c907;
     --button2-color: #3652ce;
     --dark-color-analogue: #B341F5;
     --text-contrast-color: #FD8116;
@@ -131,8 +131,9 @@ p {
 .links-container ul li {
     display: inline-block;
     margin-left: 2rem;
-    font-size: 1em;
+    font-size: 1.5rem;
     color: white;
+    font-weight: bold;
 }
 
 .links-container ul li a {
@@ -165,6 +166,7 @@ p {
     font-weight: var(--big-font-weigth);
     margin-bottom: 8px;
     margin-top: 8px;
+    height: 3rem;
 }
 
 .left-below-nav span {
@@ -172,18 +174,18 @@ p {
     color: var(--text-contrast-color);
     font-size: 3rem;
     font-weight: var(--big-font-weigth);
-    margin-top: 12px;
-    margin-bottom: 8px;
+    margin-top: 1.2rem;
 }
 
 .left-below-nav p {
     color: white;
+    margin-top: 0.2rem;
     font-size: 2rem;
     font-family: var(--big-font);
 }
 
 .left-below-nav button {
-    margin: 20px 0;
+    margin-top: 1.5rem;
 }
 
 .right-below-nav {
@@ -218,9 +220,8 @@ p {
 #skills-section {
     width: 100%;
     height: auto;
-    padding: 2em;
     margin: 0;
-    padding: 2rem 0;
+    padding: 5rem 0;
     background-image: url(./Imagenes/Backgrounds/white.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -232,6 +233,29 @@ p {
     margin: 0 auto 3rem;
     text-align: center;
 }
+
+.skills-header h3 {
+    color: darkblue;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+}
+
+.skills-header h2 {
+    margin: 1rem;
+    color: var(--text-contrast-color);
+    text-transform: uppercase;
+    font-size: 3rem;
+}
+
+.skills-header h2::after {
+    margin: 1.2rem auto 0;
+    content: '';
+    display: block;
+    width: 150px;
+    height: 3px;
+    background-color: black;
+}
+
 
 .cards-container {
     display: flex;
@@ -245,11 +269,39 @@ p {
     background-color: white;
     box-shadow: 4px 4px 4px gray;
     text-align: center;
-    padding: 1.5rem;
+    padding: 3rem;
     flex: 1;
     margin: 1.5rem;
     opacity: 0;
     position: relative;
+}
+
+.card i {
+    font-size: 3rem;
+    color: rgb(0, 0, 70);
+}
+
+.card h4 {
+    margin-top: 2rem;
+    color: darkblue;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    font-weight: normal;
+}
+
+.card h3 {
+    margin-top: 0.3rem;
+    color: var(--text-contrast-color);
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+
+.card p {
+    margin-top: 3rem;
+}
+
+.card button {
+    margin-top: 3rem;
 }
 
 .first-card {
@@ -289,9 +341,8 @@ p {
 #contact {
     width: 100%;
     height: auto;
-    padding: 2em;
     margin: 0;
-    padding: 2rem 0;
+    padding: 5rem 0;
     background-image: url(./Imagenes/Backgrounds/space2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -310,6 +361,7 @@ p {
     color: var(--text-contrast-color);
     font-size: 3rem;
     margin-bottom: 2rem;
+    text-transform: uppercase;
 }
 
 .forms-container {
@@ -360,7 +412,7 @@ form textarea {
     width: 100%;
     background-image: url(./Imagenes/Backgrounds/white.jpg);
     margin: 0;
-    padding: 6rem 0;
+    padding: 6rem 0 10rem;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -383,12 +435,14 @@ form textarea {
     font-weight: bold;
     margin-bottom: 1rem;
     text-transform: uppercase;
+    font-size: 1.2rem;
 }
 
 .faq-intro-container h2 {
     color: var(--text-contrast-color);
     text-transform: uppercase;
     font-weight: bolder;
+    font-size: 2rem;
 }
 
 .faq-intro-container a {
@@ -397,11 +451,15 @@ form textarea {
     padding-top: 2rem;
 }
 
+.faq-intro-container button {
+    margin-top: 2rem;
+}
+
 .faq-questions-container {
     width: 50%;
     margin: 0;
     justify-content: center;
-    height: auto;
+    height: 10rem;
 }
 
 .fa-info-circle {
@@ -418,7 +476,9 @@ form textarea {
     margin: 0.5rem;
     width: 100%;
     cursor: pointer;
-    
+    width: 100%;
+    max-height: 3.5rem;
+    transition: max-height 200ms linear, background-color 100ms linear;
 }
 
 .accordion[aria-expanded="false"] h3 {
@@ -455,6 +515,8 @@ form textarea {
     margin: 0.5rem;
     width: 100%;
     cursor: pointer;
+    max-height: 10rem;
+    transition: max-height 200ms linear, background-color 200ms linear;
 }
 
 .accordion[aria-expanded="true"] .faq-answer {
